--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/036/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/036/a/index.xhtml
@@ -30,7 +30,7 @@
         <ul class="navigator">
             <!--A2_2-->
             <li><a tabindex="-1" data-bind="click: function (){$vm.onSelectTab(0)}" href="#tabpanel-1"
-                   role="tab-navigator">#{i18n.getText('QMM036_3')}</a></li>
+                   role="tab-navigator" class="active">#{i18n.getText('QMM036_3')}</a></li>
             <!--A2_3-->
             <li><a tabindex="-1" data-bind="click: function (){$vm.onSelectTab(1)}" href="#tabpanel-2"
                    role="tab-navigator">#{i18n.getText('QMM036_4')}</a></li>
