--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/036/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/036/b/index.xhtml
@@ -39,7 +39,8 @@
 									options: takeoverItem,
 									optionsValue: 'value',
 									optionsText: 'name',
-									value: takeoverMethod
+									value: takeoverMethod,
+									enable: isHaveOldHis()
 									}"></div>
                     </div>
 
