--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/027/test/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/027/test/index.xhtml
@@ -9,8 +9,9 @@
 <ui:composition template="../../../../master/base.xhtml">
     <ui:define name="htmlHead">
         <com:scriptfile set="IGNITE" />
-        <com:scriptfile path="cdl028.test.vm.js" />
-        <com:scriptfile path="cdl028.test.start.js" />
+        <com:scriptfile path="../cdl028.vm.js" />
+        <com:scriptfile path="../cdl028.service.js" />
+        <com:scriptfile path="test.js" />
     </ui:define>
 
     <ui:define name="content">
