--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/008/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/008/a/index.xhtml
@@ -16,9 +16,11 @@
 		</ui:define>
 
 		<ui:define name="content">
-			<div id="functions-area"></div>
+			<div id="functions-area">
+				<button id="print-button" data-bind="click: exportExcel" style="margin-left: 30px;">#{i18n.getText('KMK007_4')}</button>
+			</div>
 			<div id="contents-area">
-				<button id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
+				
 				<div>
 					<div class="panel panel-frame contents-area-left boder-style">
 						<div class="panel panel-gray-bg panel-custom-font-size">#{i18n.getText('KMK008_1')}</div>
