QMM017 update change from fixed text to text resource and change trial calculation to server

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <div style = "display:inline-block; vertical-align: middle; margin-left: 25px;">
-                        <button data-bind = "click: calculation" style = "height: 80px; width: 80px;">#{i18n.getText('QMM017_53')}</button>
+                        <button data-bind = "click: calculate" style = "height: 80px; width: 80px;">#{i18n.getText('QMM017_53')}</button>
                     </div>
                     <div class="large-right-caret-container" style="display: inline-block; margin-left: 10px;">
                         <span class="caret-right outline large-right-caret"></span>
