--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/p/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/p/index.xhtml
@@ -32,7 +32,7 @@
                 <div class="cell valign-center">
                     <!--P1_3-->
                     <div id="P1_3" tabindex="1"
-                         data-bind="ntsDatePicker: { name: '#[QMM019_204]', value: processingDate, dateFormat: 'yearmonth'}"/>
+                         data-bind="ntsDatePicker: { name: '#[QMM019_204]', required: true, value: processingDate, dateFormat: 'yearmonth'}"/>
                     <!--P1_4-->
                     <button id="P1_4" tabindex="2" data-bind="click: reflect">#{i18n.getText('QMM019_207')}</button>
                 </div>
