--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog/sidemenu.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog/sidemenu.xhtml
@@ -20,12 +20,25 @@
 	<h1>Component</h1>
 	<ul>
 		<li><a href="/nts.uk.com.web/view/sample/catalog/overview-component.xhtml">Overview</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/let/index.xhtml">Let</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/click/index.xhtml">Click binding<span class="label label-new"/></a></li>
 		<li><a href="/nts.uk.com.web/view/sample/component/panel/panel.xhtml">Panel</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/functionpanel/functionpanel.xhtml">Function Panel</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/component/accordion/accordion.xhtml">Accordion</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/tabpanel/tabpanel.xhtml">TabPanel</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/wizard/wizard.xhtml">Wizard</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/expand/expand.xhtml">Expand Table</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/fixedtable/fixed-table.xhtml">Fixed Table</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/extable/sample.xhtml">ExTable</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/component/label/form-label.xhtml">FormLabel</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/numberedicon/numbered-icon.xhtml">Numbered Icon</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/component/linkbutton/linkbutton.xhtml">LinkButton</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/helpbutton/help-button.xhtml">Help Button</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/legendbutton/legendbutton.xhtml">Legend Button</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/imageeditor/imageeditor.xhtml">Image Upload And Edit</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/charsetsetting/charset-setting.xhtml">Charset Setting</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/click/index.xhtml">Click binding</a></li>
+	</ul>
+	<h1>Component(Selection)</h1>
+	<ul>
 		<li><a href="/nts.uk.com.web/view/sample/component/checkbox/checkbox.xhtml">CheckBox</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/component/multicheckbox/multi-checkbox.xhtml">MultiCheckBox</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/component/radiobox/radiobox.xhtml">RadioBox</a></li>
@@ -43,29 +56,21 @@
 		<li><a href="/nts.uk.com.web/view/sample/component/searchbox/searchbox-igTreeGrid.xhtml">SearchBox (igTreeGrid)</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/component/swaplist/swaplist.xhtml">SwapList (&#8646;)</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/component/updown/updown.xhtml">UpDownButtons (&#8645;)</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/expand/expand.xhtml">Expand Table</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/fixedtable/fixed-table.xhtml">Fixed Table</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/wizard/wizard.xhtml">Wizard</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/datepicker/datepicker.xhtml">Datepicker</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/customdatepicker/customdatepicker.xhtml">Custom Datepicker</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/datetime/datetime.xhtml">Datetime Range And Datetime editor<span class="label label-new"/></a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/tabpanel/tabpanel.xhtml">TabPanel</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/helpbutton/help-button.xhtml">Help Button</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/editor/text-editor.xhtml">TextEditor<span class="label label-update"/></a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/editor/special/special-editor.xhtml">TextEditor Special<span class="label label-new"/></a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/colorpicker/colorpicker.xhtml">Color Picker</a></li>
+	</ul>
+	<h1>Component(Editor)</h1>
+	<ul>
+		<li><a href="/nts.uk.com.web/view/sample/component/editor/text-editor.xhtml">TextEditor</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/editor/special/special-editor.xhtml">TextEditor Special</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/component/editor/multiline-editor.xhtml">MultilineEditor</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/component/editor/number-editor.xhtml">Number/CurrencyEditor</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/datepicker/datepicker.xhtml">DatePicker</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/daterange/daterange.xhtml">Date Range Input</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/customdatepicker/customdatepicker.xhtml">Custom Datepicker</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/datetime/datetime.xhtml">DateTime (Range) Editor</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/component/editor/timewithday-editor.xhtml">TimeWithDay</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/component/editor/time-editor.xhtml">TimeEditor</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/functionpanel/functionpanel.xhtml">Function Panel</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/colorpicker/colorpicker.xhtml">Color Picker</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/component/monthdays/monthdays.xhtml">Month Days Input</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/daterange/daterange.xhtml">Date Range Input</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/legendbutton/legendbutton.xhtml">Legend Button</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/imageeditor/imageeditor.xhtml">Image Upload And Edit</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/charsetsetting/charset-setting.xhtml">Charset Setting</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/extable/sample.xhtml"><span class="label label-update"/>ExTable</a></li>
-		<li><a href="/nts.uk.com.web/view/sample/component/numberedicon/numbered-icon.xhtml">Numbered Icon</a></li>
 	</ul>
 	<h1>Function Wrap</h1>
 	<ul>
@@ -97,6 +102,7 @@
 		<li><a href="/nts.uk.com.web/view/sample/utilities/optionalutility/optional.xhtml">Optional Utility</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/utilities/momentjs/momentjs.xhtml"><span class="label label-new"/>MomentJs</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/utilities/masterlistprint/masterlistprint.xhtml"><span class="label label-new"/>Master List Print</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/component/let/index.xhtml">Let</a></li>
 	</ul>
 	<h1>Custom tags</h1>
 	<ul>
