--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/028/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/028/a/index.xhtml
@@ -10,7 +10,7 @@
         <script>
             var dialogSize = {
                 width : 540,
-                height : 320
+                height : 350
             };
         </script>
         <com:scriptfile set="IGNITE" />
@@ -39,7 +39,7 @@
                     <!-- A2_1 -->
                     <div id="A2_1" class="lable table-2" data-bind="ntsFormLabel: { required: true}">#{i18n.getText('CDL028_3')}</div>
                     <!-- A2_2 -->
-                    <div id="A2_2" class="table-2" tabindex="1" data-bind="ntsDateRangePicker: { required: required, showNextPrevious: true, value: yearValue, maxRange: 'oneYear', type: 'year', jumpUnit: 'year'}"/>
+                    <div id="A2_2" class="table-2" tabindex="1" data-bind="ntsDateRangePicker: { required: required, showNextPrevious: true, value: yearValue, type: 'year', jumpUnit: 'year'}"/>
 
                 </div>
 
@@ -66,7 +66,7 @@
                     <!-- A1_1 -->
                     <div id="A2_1" class="lable table-2" data-bind="ntsFormLabel: { required: true}">#{i18n.getText('CDL028_3')}</div>
                     <!-- A1_2 -->
-                    <div id="A2_2" class="table-2" tabindex="1" data-bind="ntsDateRangePicker: { required: required, showNextPrevious: true, value: yearValue, maxRange: 'oneYear', type: 'yearmonth', jumpUnit: 'year'}"/>
+                    <div id="A2_2" class="table-2" tabindex="1" data-bind="ntsDateRangePicker: { required: required, showNextPrevious: true, value: yearValue, type: 'year', jumpUnit: 'year'}"/>
 
                 </div>
 
@@ -78,7 +78,7 @@
                     <!-- A1_1 -->
                     <div id="A2_1" class="lable table-2" data-bind="ntsFormLabel: { required: true}">#{i18n.getText('CDL028_3')}</div>
                     <!-- A1_2 -->
-                    <div id="A2_2" class="table-2" tabindex="1" data-bind="ntsDateRangePicker: { required: required, showNextPrevious: true, value: yearValue, maxRange: 'oneYear', type: 'yearmonth', jumpUnit: 'year'}"/>
+                    <div id="A2_2" class="table-2" tabindex="1" data-bind="ntsDateRangePicker: { required: required, showNextPrevious: true, value: yearValue, type: 'year', jumpUnit: 'year'}"/>
 
                 </div>
 
