update cps003 d ui/serverside

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
@@ -54,7 +54,7 @@
                                     /*{ prop: 'categoryCode', toggle: 'hidden', length: 20 },*/
                                     { prop: 'categoryName', length: 14}
                                 ]}"></div>
-								<button id="column-display" data-bind="text: '#{i18n.getText('CPS003_14')}'"></button>
+								<button id="column-display" data-bind="text: '#{i18n.getText('CPS003_14')}', click: $vm.settingColumns.bind($vm)"></button>
 								<div class="fixed-width margin-left" data-bind="ntsFormLabel: { required: true }">#{i18n.getText('CPS003_15')}</div>
 								<label id="history-type">#{i18n.getText('A2_007')}</label>
 								<button data-bind="ntsHelpButton: {textId: 'CPS003_16', position: 'right center' }">？</button>
