--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/d/cps003.d.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/d/cps003.d.style.css
@@ -23,15 +23,21 @@
 }
 
 label.ntsControl.limited-label {
-    width: 400px;
+    width: 250px;
 }
 
-div.form-label.required {
-    margin-left: 10px;
-	margin-right: 10px;
-}
 .valign-center.control-group{
 	height: 45px;
     width: 100%;
     border-bottom: solid 1px #B1B1B1;
+}
+#contents-area .form-group.main {
+	position: relative;
+}
+#contents-area .form-group.main>* {
+	vertical-align: top;
+}
+
+#contents-area .form-group.main>.cps003d-grid-list {
+	float: right;
 }
