qmm016: fix bug & update text resource

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/i/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/i/index.xhtml
@@ -40,10 +40,10 @@
                 <div
                         style="width: 100px; margin-left: 10px; display: inline-block;">#{i18n.getText('QMM016_76')}</div>
             </div>
-            <div style="margin-top: 20px; min-width: 550px">
+            <div class="valign-top control-group" style="margin-top: 20px; min-width: 550px">
                 <div style="width: 130px;"
                      data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM016_77')}</div>
-                <div style = "width: 280px;display: inline-flex">
+                <div style = "width: 280px; padding-top: 9px; display: inline-block">
                     <div id = "I4_2" tabindex = "2"
                          data-bind="ntsRadioBoxGroup: {
 										value: takeoverMethod,
