--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
@@ -32,7 +32,7 @@
                 <button id="A1_1" tabindex="1"
                         data-bind="click: createNewWageTable, enable: updateMode()">#{i18n.getText('QMM016_1')}</button>
                 <!--A1_2 登録-->
-                <button id="A1_2" class="proceed" tabindex="2"
+                <button id="A1_2" class="proceed" tabindex="2" style="margin-right: 70px"
                         data-bind="click: registerWageTable, enable: $root.errors.isEmpty">#{i18n.getText('QMM016_2')}</button>
                 <!--A1_3 コピー-->
                 <button id="A1_3" tabindex="3"
