--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/a/index.xhtml
@@ -21,7 +21,7 @@
 		
 		<ui:define name="content">
 			<div id="functions-area">
-				<button tabindex="1" data-bind="click: createNew, timeClick: 500">#{i18n.getText('QMM002_1')}</button>
+				<button tabindex="1" data-bind="click: createNew, enable: updateMode(), timeClick: 500">#{i18n.getText('QMM002_1')}</button>
 				<button tabindex="2" class="proceed" data-bind="click: register, enable: $root.errors.isEmpty, timeClick: 500">#{i18n.getText('QMM002_2')}</button>
 				<button tabindex="3" data-bind="enable: false">#{i18n.getText('QMM002_3')}</button>
 				<button tabindex="4" data-bind="click: openDialogQmm002d, timeClick: 500">#{i18n.getText('QMM002_4')}</button>
@@ -100,7 +100,7 @@
 					</div>
 					<hr/>
 					<div data-bind="with: selectedBankBranch">
-						<div class="valign-center control-group">
+						<div class="valign-top control-group">
 							<div data-bind="ntsFormLabel: { constraint: 'Memo' }">#{i18n.getText('QMM002_14')}</div>
 							<textarea style="height: 150px" tabindex="16" data-bind="ntsMultilineEditor: {
 								value: memo,
