--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/a/qmm031.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/a/qmm031.a.style.css
@@ -2,3 +2,10 @@
 .ntsSearchBox nts-editor ntsSearchBox_Component{
 	width: 338px;
 }
+
+.guide-content {
+	font-size: 20px;
+	white-space: pre;
+	padding: 20px !important;
+	line-height: 30px !important;
+}
