--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
@@ -329,7 +329,7 @@
 									inputFormat: 'time', 
 									mode: 'time',
 									constraint:'OvertimeAppPrimitiveTime',
-									enable: $vm.editable }" /></td>
+									enable: $vm.editable() &amp;&amp; $vm.enableOvertimeInput() }" /></td>
 						</tr>
 					</tbody>
 				</table>
@@ -373,7 +373,7 @@
 									inputFormat: 'time', 
 									mode: 'time',
 									constraint:'OvertimeAppPrimitiveTime',
-									enable: $vm.editable}" /></td>
+									enable: $vm.editable() &amp;&amp; $vm.enableOvertimeInput() }" /></td>
 							<!--A6_9 残業事前申請時間--> 						
 							<td class="right-content" data-bind="text: preAppTime"></td>
 							<!--A6_11 実績時間--> 						
