--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/005/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/005/a/index.xhtml
@@ -27,7 +27,7 @@
             <!--A1_4 予備の基準日設定-->
             <button tabindex="4" class="" data-bind="enable: false">#{i18n.getText('QMM005_4')}</button>
             <!--A1_5 雇用区分の登録-->
-            <a tabindex="5" class="goout" data-bind="ntsLinkButton: { },enable: false"
+            <a tabindex="5" class="goout" data-bind="ntsLinkButton: {action: toCmm008}, enable: true"
                style="margin-left: 30px">#{i18n.getText('QMM005_5')}</a>
         </div>
         <div class="contents-area">
