QMM025: fixbug IT: #127048

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/index.xhtml
@@ -66,7 +66,7 @@
                 </div>
                 <!--A2_8-->
                 <button id="A2_8" tabindex="7" class="danger"
-                        data-bind="click: deleteAmount, enable: $root.errors.isEmpty">#{i18n.getText('QMM025_7')}</button>
+                        data-bind="click: deleteAmount, enable: $root.errors.isEmpty &amp;&amp; enableA2_8">#{i18n.getText('QMM025_7')}</button>
                 <!--A3_1-->
                 <table id="grid" tabindex="8"/>
             </div>
