--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/index.xhtml
@@ -47,7 +47,7 @@
                         </div>
                         <div class="cell valign-center">
                             <!--A2_3-->
-                            <div id="A2_3" tabindex="4" data-bind="ntsDatePicker: {value: year, required: true, dateFormat: 'YYYY'}"/>
+                            <div id="A2_3" tabindex="4" data-bind="ntsDatePicker: {name: '#[QMM025_4]', value: year, required: true, dateFormat: 'YYYY'}"/>
                         </div>
                         <div class="cell valign-center">
                             <!--A2_4-->
