--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/e/index.xhtml
@@ -181,7 +181,7 @@
                                                         required: true}" />
                             </td>
                             <td>
-                                <input tabindex="8" style="display: block;" data-bind="ntsNumberEditor: {
+                                <input tabindex="8" data-bind="ntsNumberEditor: {
                                                         option: {
                                                             width: '75px',
                                                             decimallength: 2,
