--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/i/index1.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/i/index1.xhtml
@@ -89,7 +89,7 @@
 				</div>
 				<!-- I2_10 自動計算区分説明-->
 				<button style="display: inline-block" tabindex="7"
-					data-bind="ntsHelpButton: {image: '../resource/QMM008_01.png', position: 'bottom left', enable: true}">?</button>
+					data-bind="ntsHelpButton: {image: '../resource/QMM008_01.png', position: 'bottom left', enable: $vm.viewmodelI.isSelectedHistory}">?</button>
 			</div>
 
 
