--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/i/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/i/index.xhtml
@@ -129,7 +129,7 @@
 								</div>
 								<!-- I2_10 自動計算区分説明-->
 								<button style="display: inline-block"
-									data-bind="ntsHelpButton: {image: '../resource/上記の設定にないコード.jpg', position: 'bottom left', enable: true}">?</button>
+									data-bind="ntsHelpButton: {image: '../resource/上記の設定にないコード.jpg', position: 'bottom left', enable: $vm.isSelectedHistory}">?</button>
 							</div>
 
 
