--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/005/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/005/a/index.xhtml
@@ -30,7 +30,7 @@
             <a tabindex="5" class="goout" data-bind="ntsLinkButton: {action: toCmm008}, enable: true"
                style="margin-left: 30px">#{i18n.getText('QMM005_5')}</a>
         </div>
-        <div class="contents-area">
+        <div id="contents-area">
             <!--A2_1 給与・賞与の処理年月の設定を行います。-->
             <div class="label" style="padding: 15px 25px;">#{i18n.getText('QMM005_6')}</div>
             <!--A2_2 処理区分一覧-->
