--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/011/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/011/b/index.xhtml
@@ -11,7 +11,7 @@
 	<div class = "fixed-flex-layout" >
 		<div class = "left" >
 			<div id="B1_1" 
-				data-bind="ntsPanel:{width: '220px', height: '420px', direction: 'none', visible: true}">
+				data-bind="ntsPanel:{width: '220px', height: '420px', direction: 'right', visible: true}">
 					<div id="action">
 						<!-- B1_2 履歴追加 -->
 						<button id ="B1_2"  tabindex="4" data-bind="click: openEscreen, timeClick: 1000, enable: !enableNew()">#{i18n.getText('QMM011_6')}</button>
