--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/011/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/011/c/index.xhtml
@@ -17,7 +17,7 @@
         <div class = "fixed-flex-layout">
             <div class = "left">
                 <div id="C1_1"
-                     data-bind="ntsPanel:{width: '220px', height: '415px',direction: 'none', visible: true}">
+                     data-bind="ntsPanel:{width: '220px', height: '415px',direction: 'right', visible: true}">
                     <div id="action">
                         <!-- C1_2 履歴追加 -->
                         <button style="float: left" id ="C1_2" tabindex="20"  data-bind="click: openEscreen,timeClick: 1000, enable: !enableNew()">#{i18n.getText('QMM011_6')}</button>
