--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kml/001/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kml/001/a/index.xhtml
@@ -24,7 +24,7 @@
 					<div class="valign-center control-group">
 						<button class="proceed short-button" data-bind="click: saveData,  enable: $root.errors.isEmpty">#{i18n.getText('KML001_2')}</button>
 						<button data-bind="click: premiumDialog">#{i18n.getText('KML001_3')}</button>						
-						<button id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
+						<button id="print-button" data-bind="click: opencdl028Dialog">#{i18n.getText('KMK007_4')}</button>
 					</div>
 				</div>
 				<div id="contents-area" class="fixed-flex-layout">
