--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/a/index.xhtml
@@ -10,6 +10,7 @@
 			<com:stylefile path="style.css" />
 			<com:scriptfile path="kmf001.a.vm.js" />
 			<com:scriptfile path="kmf001.a.start.js" />
+			<com:scriptfile path="kmf001.a.service.js" />
 		</ui:define>
 
 		<!-- PAGE CONTENT -->
@@ -19,6 +20,8 @@
 			<div id="functions-area">
 				<button data-bind="click: openPrioritySettingDialog" class="small" style="margin-left: 125px;">#{i18n.getText('KMF001_13')}</button>
 				<!-- <span style="float: right;">#{i18n.getText('KMF001_14')} </span> -->
+				<button data-bind="click: exportExcel" style="margin-left: 125px;">#{i18n.getText('KMF001_13')}</button>
+
 			</div>
 			<!-- END FUNCTION AREA-->
 
