[Master-List] Fix bug CAS005

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/005/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/005/a/index.xhtml
@@ -52,7 +52,7 @@
 						data-bind="click : openDialogB , enable : isCopy	 ">#{i18n.getText('CAS005_14')}</button>
 					<!--Export Excel-->
 					<button tabindex="5"
-							data-bind="click : exportExcel , visible:hasPermission()">#{i18n.getText('CAS005_130')}</button>
+							data-bind="click : exportExcel">#{i18n.getText('CAS005_130')}</button>
 				</div>
 			</div>
 			<div id="contents-area" class="fixed-flex-layout">
