--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/036/a/qmm036.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/036/a/qmm036.a.style.css
@@ -53,3 +53,8 @@
 
 }
 
+#gridBreakdownItem .mgrid-header .mgrid-free-table td.left-align {
+    text-align: left;
+    vertical-align: middle!important;
+    padding: 2px;
+}
