--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/017/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/017/a/index.xhtml
@@ -58,7 +58,7 @@
 						data-bind="visible: closeUp, click: close">#{i18n.getText('CPS017_50')}</button>
 				</com:ko-if>
 				
-				<button id="print-button" data-bind="click: saveAsExcel, visible:hasPermission()" style="width: 120px;">#{i18n.getText('CPS017_63')}</button>
+				<button id="print-button" data-bind="click: saveAsExcel, visible:hasPermission()">#{i18n.getText('CPS017_63')}</button>
 
 			</div>
 			<div id="contents-area" class="cf">
