--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/index.xhtml
@@ -51,13 +51,13 @@
                 </a>
                 <!--</div>-->
             </div>
+            <div id="com-ccg001"/>
             <div class="contents-area fixed-flex-layout">
-                <div id="com-ccg001"/>
                 <div id="panel-left" class="fixed-flex-layout-left margin-top"
-                     style="margin-left: 100px;min-width: 385px;">
+                     style="margin-left: 90px;min-width: 385px;">
                     <div style="float: left;width: 335px;">
-                        <div tabindex="-1" class="panel" style=" margin-top: 15px"
-                             data-bind="ntsPanel:{width: '280px', height: '490px',showIcon: true, direction: 'bottom', visible: true}">
+                        <div tabindex="-1" class="panel cf" style=" margin-top: 15px"
+                             data-bind="ntsPanel:{width: '280px', height: '373px',showIcon: true, direction: 'bottom', visible: true}">
                             <!--A4_3 検索-->
                             <div tabindex="3" style="width: 280px"
                                  data-bind="ntsSearchBox: {searchMode: 'highlight',targetKey: 'individualPriceCode', comId: 'treegrid',items: salIndAmountNames, searchText: '検索', selected: salIndAmountNamesSelectedCode, selectedKey: 'individualPriceCode', fields: ['individualPriceName', 'individualPriceCode'], mode: 'igGrid'}"/>
@@ -70,7 +70,7 @@
                                    data-bind="ntsGridList:{
                                    name: '#[QMM039_12]',
                                 width: 280,
-                                rows: 18,
+                                rows: 13,
                                 dataSource: salIndAmountNames,
                                 columns: [
                                     {key:'index', length: 0, hidden: true},
@@ -86,7 +86,7 @@
                             </table>
                         </div>
                     </div>
-                    <div style="float: left;height: 400px;width: 50px;margin-top: 130px;">
+                    <div style="float: left;height: 400px;width: 50px;margin-top: 90px;">
                         <span id="custom-caret" class="caret-right"/>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                         <!--A5_6 基準年月-->
                         <div data-bind="ntsFormLabel: {  required: true}">#{i18n.getText('QMM040_13')}</div>
                         <!--A5_7 基準年月-->
-                        <div style="margin-left: 30px;">
+                        <div style="margin-left: 40px;">
                             <div id="A5_7" tabindex="5"
                                  data-bind="ntsDatePicker: {value: yearMonthFilter, dateFormat: 'yearmonth', name:'#[QMM040_13]',required: true}"/>
                         </div>
@@ -122,7 +122,9 @@
                                 style="margin-left: 13px">#{i18n.getText('QMM040_14')}</button>
                     </div>
                     <!--A5_9-->
-                    <table id="grid" tabindex="7"/>
+                    <div tabindex="7">
+                        <table id="grid"/>
+                    </div>
                 </div>
             </div>
         </div>
