--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/qmm040.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/qmm040.a.style.css
@@ -7,7 +7,7 @@
 }
 
 .margin-top {
-    margin-top: 40px;
+    margin-top: 15px;
 }
 
 .caret-background.caret-bottom:after {
@@ -32,6 +32,6 @@
 
 #grid .mgrid-free td.currency-symbol:before {
     float: left;
-    padding-right: 0px;
+    padding-right: 0;
     padding-left: 4px;
 }
