--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/d/index.xhtml
@@ -24,7 +24,7 @@
                     data-bind="click: cancel">#{i18n.getText('QMM039_39')}</button>
         </div>
         <div id="contents-area">
-            <div>
+            <div style="width: 500px">
                 <div class="row">
                     <div class="cell label-space">
                         <!--D2_1 社員コード-->
