QMM041 QMM042 #127971 QMM039 QMM041 #127919

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/a/index.xhtml
@@ -115,7 +115,7 @@
                         <!--A5_2 コード-->
                         <span id="A5_2" onclick="$('#A4_2').focus()" class="label" data-bind="text: personalUnitPriceCode"/>
                         <!--A5_3 名称-->
-                        <span id="A5_3" onclick="$('#A4_3').focus()" class="label" data-bind="text: personalUnitPriceName"/>
+                        <span id="A5_3" onclick="$('#A4_3').focus()" class="label" data-bind="text: personalUnitPriceShortName"/>
                     </div>
                     <div class="control-group valign-center row">
                         <!--A5_4 期間-->
