--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/index.xhtml
@@ -77,7 +77,7 @@
                     <!--A4_2 コード-->
                     <span class="label margin-left-item" data-bind="text: perUnitPriceCode()"/>
                     <!--A4_3 名称-->
-                    <span style="margin-left: 5px" class="label" data-bind="text: perUnitPriceName()"/>
+                    <span style="margin-left: 5px" class="label" data-bind="text: perUnitPriceShortName()"/>
                 </div>
                 <div class="flex valign-center margin-top-item" style="margin-bottom: 20px">
                     <!--A4_4 基準年月-->
