QMM013, QMM041 update

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/c/index.xhtml
@@ -59,7 +59,8 @@
                                  value: startYearMonth,
                                  dateFormat: 'yearmonth',
                                  required: true,
-                                 name : '#[QMM041_42]'}"
+                                 name : '#[QMM041_42]',
+                                 enable: modifyMethod() == 1}"
                         />
                         <span style="padding:0 5px;">～</span>
                         <span data-bind="text: endYearMonth"/>
