--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/005/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/005/a/index.xhtml
@@ -10,11 +10,14 @@
 				<com:stylefile path="ksm005.a.main.css" />
 				<com:scriptfile set="IGNITE" />
 				<com:scriptfile path="ksm005.a.start.js" />
+				<com:scriptfile path="ksm005.a.service.js" />
 				<com:scriptfile path="ksm005.a.vm.js" />
+				
 			</ui:define>
 	
 			<ui:define name="content">
 				<div tabindex="-1" id="functions-area">
+					<button id="print-button_1" data-bind="click: opencdl028Dialog">#{i18n.getText('KSM004_100')}</button>
 				</div>
 				
 				<div tabindex="-1" id="contents-area">
