--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/009/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/009/a/index.xhtml
@@ -35,6 +35,9 @@
 
 				<button id="closeBtn" style="visibility: hidden;"
 					data-bind="click: closeDialog" tabindex="3">#{i18n.getText('CPS016_4')}</button>
+				<!--Export Excel-->
+				<button tabindex="4"
+					data-bind="click : exportExcel">#{i18n.getText('CAS005_130')}</button>
 				<!-- A1_005: link label 個人情報定義へ -->
 				<a class='goout link-button'
 						data-bind="ntsLinkButton: {jump: '/view/cps/002/a/index.xhtml' }, style: { 'margin-left': _.size(currentCategory().itemList()) &lt; 15 ? '607px' : '625px'}"
